[gd_scene load_steps=8 format=3 uid="uid://cb14ba5xidrs4"]

[ext_resource type="Script" path="res://enemies/carrot.gd" id="1_54ccl"]
[ext_resource type="Texture2D" uid="uid://cxy5a1fi6jcjo" path="res://assets/icon.svg" id="1_qpko5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8vvs1"]
albedo_texture = ExtResource("1_qpko5")

[sub_resource type="BoxMesh" id="BoxMesh_unklm"]

[sub_resource type="BoxMesh" id="BoxMesh_p1miv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4wcus"]

[sub_resource type="BoxShape3D" id="BoxShape3D_couqs"]

[node name="carrot" type="CharacterBody3D"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.4, 0)
collision_layer = 2
collision_mask = 4
script = ExtResource("1_54ccl")

[node name="main_mesh" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_8vvs1")
mesh = SubResource("BoxMesh_unklm")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="main_mesh"]
transform = Transform3D(0.0140644, 0, 0.769568, 0, 0.385, 0, -0.419764, 0, 0.0257847, 0, 0.22, -0.41417)
mesh = SubResource("BoxMesh_p1miv")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="main_mesh"]
transform = Transform3D(0.0140644, 0, 0.769568, 0, 0.895, 0, -0.419764, 0, 0.0257847, 0, -0.0661666, 0.528157)
visible = false
mesh = SubResource("BoxMesh_p1miv")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_4wcus")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
shape = SubResource("BoxShape3D_couqs")

[node name="Timer" type="Timer" parent="."]

[node name="agro_timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="agro_timer" to="." method="_on_agro_timer_timeout"]
